--- a/Cours1.html
+++ b/Cours1.html
@@ -7,19 +7,81 @@
     <title>Cours algo</title>
 </head>
 
-<body>
+    <header>
+        <h1>Algorithme de programmation</h1>
+        <ol>
+            <li>Ligne de code </li>
+            <li>c'est des variables, des fonctions, des conditions, des boucles</li>
+            <li>Une suite logique</li>
+            <li>Croquis de code à l'implémentation</li>
+        </ol>
+        <p><b>Definition:</b>
+            <br>C'est une suite d'instrution prenant des données en entrée, réalisant un traitement et produit des donéées en sortie.
+            <ul>
+                <li>Un algo est indépendant de tout language de programmation car un programme n'est rien d'autre que l'implémentation d'un algo.</li>
+                <li>En algo on ne parle pas de code mais de pseudo-code.</li>
+            </ul>
+            <br>user(algo) -> (language de programmation =traduction) -> machine(binaire = 01)
+            <br>algo != (ARP = logiciel de programmation)
+        </p>
+        <p>
+            *Une instruction: c'est un ensemble d'élément exécutant une tache bien précise.
+            <br>Comme :
+            <ul>
+                <li>les variables</li>
+                <li>les constantes</li>
+                <li>les opérateurs</li>
+                <li>les boucles</li>
+                <li>les fonctions</li>
+                <li>les tableaux...</li>
+            </ul>
+        </p>
+    </header>
 
-    <h1>Algorithme</h1>
+    <body>
+
+    <h2>Structure d'un Algorithme</h2>
+    <h3>Différente étapes</h3>
     <ol>
-        <li>Ligne de code </li>
-        <li>c'est des variables, des fonctions, des conditions, des boucles</li>
-        <li>Une suite logique</li>
-        <li>Croquis de code à l'implémentation</li>
+        <li><h4>Etape de déclaration</h4></li>
+        <li><h4>Etape de traitement</h4></li>
+        <li><h4>Résultat</h4></li>
     </ol>
-    <p><b>Definition:</b>
-        <br>C'est une suite d'instrution prenant des données en entrée, réalisant un traitement et produit des donéées en sortie.
-        <br>Un algo est indépendant de tout language de programmation car un programme n'est rien d'autre que l'implémentation d'un algo.
+    <h3>Structure</h3>
+    <p>
+        Algo nom de l'algo
+        <ul>
+            <li>{Comentaire} ou -commentaire</li>
+            <li>Variable: nom de la variable type de variable</li>
+            <li>          nom de la variable2 type de variable</li>
+            <li>Constatnte nom de la constante = =(=affectation) valeur de la constante</li>
+            <li>tableau nom du tableau(exemple:5) type du tableau</li>
+            <li>Debut {<ul>
+                <li>instruction 1</li>
+                <li>instruction 2...</li>
+                <li>Return resultat;</li>
+                <li>} Fin</li></ul>
+            </li>
+        </ul>
+    </p>
+    <h3>Instruction lire et écrire</h3>
+    <p>
+        Ces instructions permettent de récupérer la saisie d'un user ou d'afficher des éléments à l'écran.
+        <br>Lire : Récupérer
+        <br>Ecrire : Afficher
+    </p>
+    <h2>2. Les Variables</h2>
+    <h3>Définition</h3>
+    <p>
+        Une variable est un conténer, c'est comme une boite qui peut contenir divers éléments.Pour identifier cette boite, on lui cole une étiquette qui n'est rien d'autre que le nom de la variable. Le contenu de la boite est la valeur de la variable et le type d'élément contenu dans la boite est le type de la variable.
+    </p>
+    <h3>Déclaration d'une variable</h3>
+    <p>
+        
     </p>
 </body>
 
+<footer>
+
+</footer>
 </html>
