--- a/Cours1.html
+++ b/Cours1.html
@@ -77,7 +77,26 @@
     </p>
     <h3>Déclaration d'une variable</h3>
     <p>
-        
+        La déclaration des variables se fait tout au début de l'algo, aprés la déclaration de l'algo même. Mais avant la 1er instruction concernant le traitement.
+        <br>Pour déclarer une variable, on utilise le mot variable suivis du nom de la variableensuite de 2 points et du type de la variable.
+        <br>Les var du même type peuvent être déclarer sur la même ligne
+        <br>Exemple:
+        <ul>
+            <li>Variable prénom, nom: char</li>
+            <li>age : int</li>
+            <li>taille : float/double</li>
+            <li>des chaines de caractéres : string</li>
+        </ul>
+    </p>
+    <h3>Les types de variables</h3>
+    <p>
+        On attribut un type à une var selon son contenu.
+        <br>Exemple:
+        <ul>
+            <li>Age => entier/int</li>
+        </ul>
+        <h4>1. Booléen</h4>
+            C'est de type de donnée qui correspond à 2 alternatives: vrai==0 ou faux==1
     </p>
 </body>
 
