--- a/Cours1.html
+++ b/Cours1.html
@@ -85,7 +85,7 @@
             <li>Variable prénom, nom: char</li>
             <li>age : int</li>
             <li>taille : float/double</li>
-            <li>des chaines de caractéres : string</li>
+            <li>des chaines de caractéres : char</li>
         </ul>
     </p>
     <h3>Les types de variables</h3>
@@ -95,8 +95,29 @@
         <ul>
             <li>Age => entier/int</li>
         </ul>
-        <h4>1. Booléen</h4>
+        <h4>1. Booléen/Bool</h4>
             C'est de type de donnée qui correspond à 2 alternatives: vrai==0 ou faux==1
+        <h4>2. Entier/int</h4>
+            C'est de type de donnée qui correspond aux entiers naturels.
+        <h4>3.Réel/float/double</h4>
+            C'est de type de donnée qui correspond aux nbrs décimaux.
+        <h4>4.Chaine de caractéres/char</h4>
+            C'est de type de donnée qui correspond aux plusieurs caractéres.
+    </p>
+    <h3>Attention</h3>
+    <p>
+        Supposons notre var a:
+        <ul>
+            <li>"1" => a : char;</li>
+            <li>1 => a : int;</li>
+            <li>1,0 => : float/double;</li>
+        </ul>
+    </p>
+    <h3>Affectation d'une variable</h3>
+    <p>
+        C'est d'assigné une valeur à une var. Le propre d'une var étant de varier donc la notion d'égaliter pour l'affectation des var est inexistante en Algo.
+        <br>Exemple: 32 -> Toto;
+        <br>24 -> Toto; Toto = 24.
     </p>
 </body>
 
