--- a/Cours1.html
+++ b/Cours1.html
@@ -119,6 +119,19 @@
         <br>Exemple: 32 -> Toto;
         <br>24 -> Toto; Toto = 24.
     </p>
+    <h2>3. Les constatntes</h2>
+    <h3>Définition</h3>
+    <p>
+        Une constante est un conténer qui contient une seul et unique valeur qui ne change jamais.
+        <br>Exemple : 3.14 -> Pi;
+    </p>
+    <h3>Déclaration et affectation d'une constante</h3>
+    <p>
+        La déclaration de la constante et accompagnée de son affectation. Etant donné que la valeur de la constante ne changera pas, donc si on lui affecte sa valeur de la déclaration. Le type reste facultatif pour les constantes.
+        <br>exemple : Pi ← 3,14;
+                        <br>Pi Réel ← 3,14;
+    </p>
+    
 </body>
 
 <footer>
