--- a/Cours1.html
+++ b/Cours1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-
+<!--https://www.xm1math.net/algobox/download.html-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -131,7 +131,45 @@
         <br>exemple : Pi ← 3,14;
                         <br>Pi Réel ← 3,14;
     </p>
-    
+    <h2>Les opérateurs</h2>
+    <p>
+        Les opérateurs sont les éléments qui nous permettent d'assoccier, de comparer, de calculer...les valeurs ou autre éléments.
+    </p>
+    <h3>Opérateurs arithmétique</h3>
+    <p>
+        <ul>
+            <li>+(add)</li>
+            <li>-</li>
+            <li>*</li>
+            <li>/</li>
+            <li>% : modul</li>
+            <li>^ // ** :puissance</li>
+        </ul>
+    </p>
+    <h3>Les opérateurs de comparaison</h3>
+    <p>
+        <ul>
+            <li> inf &lt;</li>
+            <li> sup &gt;</li>
+            <li>sup ou =</li>
+            <li>inf ou =</li>
+            <li>!= différent</li>
+            <li>= = équivalent</li>
+        </ul>
+    </p>
+    <h3>Opérateurs logiques</h3>
+    <p>
+        <ul>
+            <li>&& == et</li>
+            <li>II == ou</li>
+            <li>! == non</li>
+        </ul>
+    </p>
+    <h3>Opérateurs alphanumérique ou chaine de caractéres</h3>
+    <p>
+        Cette opérateur permet de faire la concaténation de chaines de caratéres avec d'autre types.
+        "+" ou "&" ou "," ;
+    </p>
 </body>
 
 <footer>
