--- a/Cours1.html
+++ b/Cours1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./cours.css">
     <title>Cours algo</title>
 </head>
 
@@ -15,15 +16,17 @@
             <li>Une suite logique</li>
             <li>Croquis de code à l'implémentation</li>
         </ol>
-        <p><b>Definition:</b>
-            <br>C'est une suite d'instrution prenant des données en entrée, réalisant un traitement et produit des donéées en sortie.
-            <ul>
-                <li>Un algo est indépendant de tout language de programmation car un programme n'est rien d'autre que l'implémentation d'un algo.</li>
-                <li>En algo on ne parle pas de code mais de pseudo-code.</li>
-            </ul>
-            <br>user(algo) -> (language de programmation =traduction) -> machine(binaire = 01)
-            <br>algo != (ARP = logiciel de programmation)
-        </p>
+        <section class="Definition">
+                <p><b>Definition:</b>
+                <br>C'est une suite d'instrution prenant des données en entrée, réalisant un traitement et produit des donéées en sortie.
+                <ul>
+                    <li>Un algo est indépendant de tout language de programmation car un programme n'est rien d'autre que l'implémentation d'un algo.</li>
+                    <li>En algo on ne parle pas de code mais de pseudo-code.</li>
+                </ul>
+                <br>user(algo) -> (language de programmation =traduction) -> machine(binaire = 01)
+                <br>algo != (ARP = logiciel de programmation)
+                </p>
+        </section>
         <p>
             *Une instruction: c'est un ensemble d'élément exécutant une tache bien précise.
             <br>Comme :
@@ -39,7 +42,8 @@
     </header>
 
     <body>
-
+    
+    <section class="partie">
     <h2>Structure d'un Algorithme</h2>
     <h3>Différente étapes</h3>
     <ol>
@@ -70,6 +74,9 @@
         <br>Lire : Récupérer
         <br>Ecrire : Afficher
     </p>
+    </section>
+
+    <section class="partie">
     <h2>2. Les Variables</h2>
     <h3>Définition</h3>
     <p>
@@ -119,6 +126,9 @@
         <br>Exemple: 32 -> Toto;
         <br>24 -> Toto; Toto = 24.
     </p>
+    </section>
+
+    <section class="partie">
     <h2>3. Les constatntes</h2>
     <h3>Définition</h3>
     <p>
@@ -170,6 +180,7 @@
         Cette opérateur permet de faire la concaténation de chaines de caratéres avec d'autre types.
         "+" ou "&" ou "," ;
     </p>
+    </section>
 </body>
 
 <footer>
