--- a/Cours1.html
+++ b/Cours1.html
@@ -78,10 +78,12 @@
 
     <section class="partie">
     <h2>2. Les Variables</h2>
+    <section class="Definition">
     <h3>Définition</h3>
     <p>
         Une variable est un conténer, c'est comme une boite qui peut contenir divers éléments.Pour identifier cette boite, on lui cole une étiquette qui n'est rien d'autre que le nom de la variable. Le contenu de la boite est la valeur de la variable et le type d'élément contenu dans la boite est le type de la variable.
     </p>
+    </section>
     <h3>Déclaration d'une variable</h3>
     <p>
         La déclaration des variables se fait tout au début de l'algo, aprés la déclaration de l'algo même. Mais avant la 1er instruction concernant le traitement.
@@ -130,11 +132,13 @@
 
     <section class="partie">
     <h2>3. Les constatntes</h2>
+    <section class="Definition">
     <h3>Définition</h3>
     <p>
         Une constante est un conténer qui contient une seul et unique valeur qui ne change jamais.
         <br>Exemple : 3.14 -> Pi;
     </p>
+    </section>
     <h3>Déclaration et affectation d'une constante</h3>
     <p>
         La déclaration de la constante et accompagnée de son affectation. Etant donné que la valeur de la constante ne changera pas, donc si on lui affecte sa valeur de la déclaration. Le type reste facultatif pour les constantes.
@@ -171,7 +175,7 @@
     <p>
         <ul>
             <li>&& == et</li>
-            <li>II == ou</li>
+            <li>|| == ou</li>
             <li>! == non</li>
         </ul>
     </p>
@@ -180,6 +184,36 @@
         Cette opérateur permet de faire la concaténation de chaines de caratéres avec d'autre types.
         "+" ou "&" ou "," ;
     </p>
+    </section>
+
+    <section class="partie">
+        <h2>Les conditions</h2>
+        <p>
+            Les conditions nous permettent de tester si une instruction est vérifiée ou non. C'est à dire si elle renvoie vrai ou faux.
+        </p>
+        <h3>La condition simple: si</h3>
+        <p>
+            Synthaxe: si(condition) alors{
+                <br>Instruction
+            <br>}Fin
+            <br>Exemple :
+            <ul>Si (a > b) alors{
+                <li>r&lt;-a/b</li>
+                <li>écrire r;</li>
+                <li>} Fin;</li>
+            </ul>  
+        </p>
+        <h3>Les conditions alternative (si,sinon)</h3>
+        <p>
+            Synthaxe:
+            <ul>
+                <li>si(condition)alors{</li>
+                <li>instruction1</li>
+                <li>sinon</li>
+                <li>instruction2</li>
+                <li>} Finsi</li>
+            </ul>
+        </p>
     </section>
 </body>
 
