--- a/Cours1.html
+++ b/Cours1.html
@@ -103,6 +103,14 @@
         <br>Exemple:
         <ul>
             <li>Age => entier/int</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
         </ul>
         <h4>1. Booléen/Bool</h4>
             C'est de type de donnée qui correspond à 2 alternatives: vrai==0 ou faux==1
@@ -214,6 +222,32 @@
                 <li>} Finsi</li>
             </ul>
         </p>
+        <h3>Les conditions multiples</h3>
+        <p>
+            C'est le fait d'inbriquer des conditions alternatives simples autant de fois que nécessaire.
+            <br>Synthaxe:
+            <ul>
+                <li>si(condition)alors{</li>
+                <li>instruction1</li>
+                <li>sinon si(condition2)alors{</li>
+                <li>instruction2</li>
+                <li>}finsi</li>
+                <li>sinon</li>
+                <li>instruction3</li>
+                <li>}finsi</li>
+            </ul>
+            <ul>Exemple:
+                <li>si(c == "Mr")alors{</li>
+                <li>Ecrire "Bonjour Mr";</li>
+                <li>sinon si(c == "Mme")alors{</li>
+                <li>Ecrire "Bonjour Mme";</li>
+                <li>sinon</li>
+                <li>Ecrire "Bonjour Mlle";</li>
+                <li>}finsi</li>
+                <li>}finsi</li>
+            </ul>
+        </p>
+        <h3>Selectionne (Selon que)</h3>
     </section>
 </body>
 
