--- a/Cours1.html
+++ b/Cours1.html
@@ -128,7 +128,7 @@
     </section>
 
     <section class="partie">
-    <h2>3. Les constatntes</h2>
+    <h2>3. Les constantes</h2>
     <section class="Definition">
     <h3>Définition</h3>
     <p>
@@ -154,7 +154,7 @@
             <li>*</li>
             <li>/</li>
             <li>% : modul</li>
-            <li>^ // ** :puissance</li>
+            <li>^ || ** :puissance</li>
         </ul>
     </p>
     <h3>Les opérateurs de comparaison</h3>
@@ -256,7 +256,52 @@
             </ul>
         </p>
     </section>
-    <h2>Les boucles</h2>
+    <section class="partie">
+        <h2>Les boucles</h2>
+        <p>
+            Une boucle sert à répéter une instruction ou un bloc d'instruction autant de fois que nécessaire selon la || les condition(s) définis par le programmeur.
+        </p>
+        <h3>Tant que (while)</h3>
+        <p>
+            La boucle tant que test une condition et si la condition est vérifié elle éxécute les instructions, sinon elle ne fera rien.
+        </p>
+        <ul>Synthaxe :
+            <li>Tant que (condition) faire{</li>
+            <li>instruction</li>
+            <li>}Fintantque</li>
+        </ul>
+        <aside class="exemple">
+            <ul class="Definition">exemple :
+                <li>n ← 0</li>
+                <li>Tant que n &lt;=10 faire{</li>
+                <li>Ecrire n;</li>
+                <li>n ← n + 1;</li>
+                <li>} Fintant que;</li>
+            </ul>  
+            <ul class="résultat">résultat :
+                <li>0</li>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>10</li>
+            </ul>
+        </aside>
+        <h3></h3>
+        <p>
+
+        </p>
+        <h3>Pour (for)</h3>
+        <p>
+
+        </p>
+    </section>
+
 </body>
 
 <footer>
