--- a/Cours1.html
+++ b/Cours1.html
@@ -325,9 +325,60 @@
         </aside>
         <h3>Pour (for)</h3>
         <p>
-
+            Elle sert à répéter une instruction ou un bloc d'instructiongrâce à une variable qu'on initialise et à laquelle on va donner un pas pour atteindre sa condition d'arrêt.
         </p>
-        
+        <aside class="exemple">
+        <ul>Synthaxe :
+            <li>pour nom de la variable de<b>valeur initial</b>jusqu'à<b>valeur d'arrêt</b>faire{</li>
+            <li>instruction</li>
+            <li>nom de la variable ++;</li>
+            <li>}Finpour</li>
+        </ul>
+            <ul class="Definition">exemple :
+                <li>pour n De 1 jusqu'à 10 faire {</li>
+                <li>a ← n*n;</li>
+                <li>Écrire "L'aire d'un carré de côté ",n " est de ",a;</li>
+                <li>n ← n + 1 || n++;</li>
+                <li>}Finpour</li>
+            </ul>  
+            <ul class="résultat">résultat :
+                <li>L'aire d'un carré de côté 1 est de 1</li>
+                <li>L'aire d'un carré de côté 2 est de 4</li>
+                <li>L'aire d'un carré de côté 3 est de 9</li>
+                <li>L'aire d'un carré de côté 4 est de 16</li>
+                <li>L'aire d'un carré de côté 5 est de 25</li>
+                <li>L'aire d'un carré de côté 6 est de 36</li>
+                <li>L'aire d'un carré de côté 7 est de 49</li>
+                <li>L'aire d'un carré de côté 8 est de 64</li>
+                <li>L'aire d'un carré de côté 9 est de 81</li>
+                <li>L'aire d'un carré de côté 10 est de 100</li>
+            </ul>
+        </aside>
+        <aside class="exemple">
+        <ul>Synthaxe :
+            <li>pour nom de la variable de<b>valeur initial</b>jusqu'à<b>valeur d'arrêt</b> pas de <b>valeur incrément</b> faire{</li>
+            <li>instruction</li>
+            <li>}Finpour</li>
+        </ul>
+            <ul class="Definition">exemple :
+                <li>pour n De 1 jusqu'à 10 faire pas de 1 faire{</li>
+                <li>a ← n*n;</li>
+                <li>Écrire "L'aire d'un carré de côté ",n " est de ",a;</li>
+                <li>}Finpour</li>
+            </ul>  
+            <ul class="résultat">résultat :
+                <li>L'aire d'un carré de côté 1 est de 1</li>
+                <li>L'aire d'un carré de côté 2 est de 4</li>
+                <li>L'aire d'un carré de côté 3 est de 9</li>
+                <li>L'aire d'un carré de côté 4 est de 16</li>
+                <li>L'aire d'un carré de côté 5 est de 25</li>
+                <li>L'aire d'un carré de côté 6 est de 36</li>
+                <li>L'aire d'un carré de côté 7 est de 49</li>
+                <li>L'aire d'un carré de côté 8 est de 64</li>
+                <li>L'aire d'un carré de côté 9 est de 81</li>
+                <li>L'aire d'un carré de côté 10 est de 100</li>
+            </ul>
+        </aside>
     </section>
 
 </body>
