--- a/Cours1.html
+++ b/Cours1.html
@@ -354,6 +354,7 @@
                 <li>L'aire d'un carré de côté 10 est de 100</li>
             </ul>
         </aside>
+        <section class="border">
         <aside class="exemple">
         <ul>Synthaxe :
             <li>pour nom de la variable de<b>valeur initial</b>jusqu'à<b>valeur d'arrêt</b> pas de <b>valeur incrément</b> faire{</li>
@@ -379,6 +380,7 @@
                 <li>L'aire d'un carré de côté 10 est de 100</li>
             </ul>
         </aside>
+    </section>
     </section>
 
 </body>
